# daigrams_workflow

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: config.py  llm.py  prompts.py
app/agents/: assistant_agent.py  diagram_agent.py
app/api/: main.py
app/models/: diagram.py
app/services/: assistant_service.py  diagram_service.py
tests/: test_api.py
